--- a/packages/homepage/index.html
+++ b/packages/homepage/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Homepage: Vite + React + TS</title>
   </head>
   <body>
-    <div id="helloWorldRoot"></div>
+    <div id="homepageRoot"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
